cabal-version:       2.4

-- The name of the package.
name:                asterius-test

-- The package version.
version:             0.1.0.0

-- The license under which the package is released.
license:             MIT

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              Mårten Åsberg

executable hello-world
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >= 4.12.0.0
  hs-source-dirs:      hello-world
  default-language:    Haskell2010

executable calling-js
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:
      base >= 4.12.0.0
    , asterius-prelude == 0.0.1
  hs-source-dirs:      calling-js
  default-language:    Haskell2010

executable calling-hs
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >= 4.12.0.0
  hs-source-dirs:      calling-hs
  default-language:    Haskell2010
